# ante-preview

./: .gitignore  CHANGELOG.md  README.md
.github/ante/: ante_agent.py
.github/workflows/: ante-harbor-test.yml
crates/agent-sdk/: Cargo.toml  README.md
crates/agent-sdk/examples/: claude_code.rs
crates/agent-sdk/src/: lib.rs  stdio.rs
crates/agent-sdk/src/claude/: messages.rs  mod.rs  options.rs
crates/protocol-shape/src/: msg.rs
crates/protocol/src/: msg.rs
docs/: agent-org.mdx  architecture.mdx  commands.mdx  configuration.mdx  core-concepts.mdx  docs.json  headless.mdx  introduction.mdx  memory.mdx  offline.mdx  protocol.md  protocol.mdx  quickstart.mdx  run-habor-workflow.md  subagents.mdx  tools.mdx  tui.mdx
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: offline.mdx
docs-site/docs/antix/: introduction.md  quickstart.md
docs-site/docs/benchmarks/: compare_table.md
docs-site/docs/concepts/: core-concepts.mdx  protocol.mdx
docs-site/docs/configuration/: coding-plan.mdx  preference.mdx  providers.mdx
docs/concepts/: architecture.mdx  core-concepts.mdx
docs/configuration/: permission.mdx  preference.mdx  providers.mdx
docs/extend/: configuration.mdx  skills.mdx
docs/start/: eval.mdx  overview.mdx  philosophy.mdx  quickstart.mdx
docs/usage/: headless.mdx  serve.mdx  tui.mdx
static/: install.sh
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  wrangler.jsonc  wrangler.toml
website/docs/: agent-org.mdx  offline.mdx  tools.mdx
(+45 files in other folders)
