[package]
name = "agent-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread"] }
which = "8.0.0"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
